--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="./js/director.js"></script>
 <script type="text/javascript" src="./js/mustache.js"></script>
 <script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="./js/import.js"></script>
+<script type="text/javascript" src="./js/require.js"></script>
 <script type="text/javascript" src="./js/main.js"></script>
 
 <head>
