--- a/temPages/loginPage.html
+++ b/temPages/loginPage.html
@@ -1,8 +1,8 @@
 <div id="login-page">
     <div id="main-logo"></div>
     <div class="input-form">
-        <input id="login-account" type="text" placeholder="账号/邮箱">
-        <input id="login-password" type="password" placeholder="密码">
+        <input id="input-account" type="text" placeholder="账号/邮箱">
+        <input id="input-password" type="password" placeholder="密码">
     </div>
     <div id="btns" class="btn-container">
         <button id="btn-login" class="btn primary">登录</button>
