--- a/temPages/taskPage.html
+++ b/temPages/taskPage.html
@@ -2,7 +2,6 @@
     <div id="func-bar">
         <ul>
             <li id="func-task" data-target="today-task">任务</li>
-            <li id="func-history" data-target="review-history">历史</li>
         </ul>
     </div>
     <div id="today-task">
@@ -10,7 +9,7 @@
         <div id="task-list">
         </div>
     </div>
-    <div id="review-history">
+    <div id="review-history" class="hide">
 
     </div>
 
