--- a/temPages/loginPage.html
+++ b/temPages/loginPage.html
@@ -4,10 +4,11 @@
         <input id="input-account" type="text" placeholder="账号/邮箱">
         <input id="input-password" type="password" placeholder="密码">
     </div>
-    <div id="btns" class="btn-container">
+    <div id="login-btn-group" class="btn-container">
         <button id="btn-login" class="btn primary">登录</button>
-        <button id="btn-skip" class="btn">跳过</button>
+
     </div>
+    <span id="span-reg">还没有账号？<span id="link-reg">立即注册</span></span>
 </div>
 
 
