--- a/temPages/taskPage.html
+++ b/temPages/taskPage.html
@@ -1,13 +1,34 @@
 <div id="task-page">
-    <div id="func-bar">
+    <div id="func-bar" class="tab-list">
         <ul>
-            <li id="func-task" data-target="today-task">任务</li>
+            <li id="func-task" class="active" data-target="today-task">任务</li>
+            <li id="func-review" data-target="review-history">历史</li>
         </ul>
     </div>
     <div id="today-task">
         <input id="new-task" type="text" placeholder="添加新任务"/>
         <div id="task-list">
+            <div id="task-list-high">
+                <ul>
+
+                </ul>
+            </div>
+            <div id="task-list-normal">
+                <ul>
+
+                </ul>
+            </div>
+            <div id="task-list-done" >
+                <div class="line-bar" style="display: none">
+                    <div id="task-done-toggle"><i class="icon iconfont icon-arrowright"></i>已完成任务</div>
+                    </div>
+                <ul style="display: none;">
+
+                </ul>
+            </div>
+
         </div>
+        <div id="today-task-async"><i class="icon iconfont icon-tongbu"></i><span class="asyncNotify"></span><span id="nowDate"></span></div>
     </div>
     <div id="review-history" class="hide">
 
