--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     return currentdate+" "+showDay[date.getDay()];
                 };
             window.app={
-                apiUrl:"http://localhost:3808/api/",
+                apiUrl:"http://sxapi.dongneng.cc/api/",
                 userToken:"",
                 userInfo:{
                     loginId:undefined,
